# weight-tracker

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: build.yml
output/: output.csv
src/: main.py
src/analyze/: matches.py  read_image.py
src/models/: measurement.py
src/ui/: camera.py
